# lerobot-dp-rollout

./: .gitignore  .gitmodules  FRANKAX_DEPLOY.md  check_model_params.py  deploy_policy.sh  deploy_policy_server.sh  deploy_policy_server_timed.sh  dual_vr_record_direct.md  dual_vr_record_direct.py  fixed_parallel_deploy.py  franka_fer_example.yaml  replay_trajectory.py  simple_movement_test.py  test_camera_performance.py  test_franka_cameras.py  test_franka_fer.py  test_real_vr_input.py  test_record.sh  test_vr_auto.py  test_vr_complete.py  test_vr_integration.py  test_vr_motion.py  test_vr_parsing.py  test_vr_teleop_performance.py  test_wave.sh  train_act_policy.sh  train_dp_policy.sh
datasets/franka_wave/: README.md
datasets/franka_wave/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
datasets/meta/: episodes.jsonl  episodes_stats.jsonl  info.json
datasets/policy_rollout/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
datasets/test_pick_and_place/meta/: episodes.jsonl  episodes_stats.jsonl  info.json
datasets/xhand_test/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
examples/: 2_evaluate_pretrained_policy.py
franka_server/: CMakeLists.txt  build.sh  deploy.md
franka_server/include/: weighted_ik.h
franka_server/src/: 20250812_212835_len284.csv  examples_common.cpp  reference_logging_client.cpp  velocity_client.py  velocity_server.cpp  weighted_ik.cpp
franka_teleoperator/: CMakeLists.txt  build.sh  deploy.md  setup.py  test_basic_vr.py  vr_ik_bridge.cpp
franka_teleoperator/references/: franka_logger_client.cpp  logger_node.py
franka_xhand_teleoperator/: CMakeLists.txt  adb_setup.py  arm_ik_processor.py  build.sh  build_router.sh  build_weighted_ik.sh  hand_retargeting_processor.py  pyproject.toml  setup.py  setup_router.py  test_arm_vr_control.py  test_combined_vr_control.py  test_hand_vr_control.py  test_router_simple.py  weighted_ik_bridge.cpp
franka_xhand_teleoperator/src/: hand_retargeting_processor.py  vr_ik_bridge.cpp  vr_message_router.cpp  weighted_ik_bridge.cpp
scripts/: generate_dataset_stats.py  push_datasets.py
scripts/demonstration/: test_xhand_gestures.py  test_xhand_record.sh
scripts/dual_robot/: test_dual_vr_record_direct.py  test_dual_vr_replay.py
scripts/franka/: replay_trajectory.py
scripts/orange-cube-pick-n-place/: train_act_bypass_draccus.py  train_diffusion_bypass_draccus.py
scripts/orange-cube-pick-n-place-force/: deploy_combo_policy.py  train_act_bypass_draccus.py  train_diffusion_bypass_draccus.py
scripts/rollout/: deploy_combo_direct.py
scripts/xhand/: test_xhand_vr_teleoperator.py
src/lerobot/: record.py
src/lerobot/motors/franka_fer/: __init__.py  franka_client.py  franky_client.py  test_replay.py
src/lerobot/robots/: __init__.py  utils.py
src/lerobot/robots/franka_fer/: __init__.py  franka_fer.py  franka_fer_config.py
src/lerobot/robots/franka_fer_xhand/: __init__.py  franka_fer_xhand.py  franka_fer_xhand_config.py
src/lerobot/robots/xhand/: __init__.py  teleoperator.py  xhand.py  xhand_config.py
src/lerobot/scripts/server/: constants.py  helpers.py  policy_server.py  robot_client.py
src/lerobot/teleoperators/: __init__.py  utils.py  vr_router_manager.py  vr_teleoperator.py
src/lerobot/teleoperators/franka_fer_vr/: __init__.py  arm_ik_processor.py  config_franka_fer_vr.py  franka_fer_vr_teleoperator.py
src/lerobot/teleoperators/franka_fer_xhand_vr/: __init__.py  config_franka_fer_xhand_vr.py  franka_fer_xhand_vr_teleoperator.py
src/lerobot/teleoperators/xhand_vr/: __init__.py  config_xhand_vr.py  vr_hand_detector_adapter.py  xhand_vr_teleoperator.py
test_pick_and_place/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
test_scripts/: push_datasets.py  test_composite_robot.py  test_dual_arm_hand_vr_control.py  test_dual_vr_teleoperator.py  test_franka_fer_xhand_vr_data_collection.py  test_record.sh  test_xhand_vr_teleoperator.py  xhand_teleoperation.py
test_scripts/dual_robot/: README.md  test_dual_vr_record_direct.py  test_dual_vr_replay.py
test_scripts/franka/: test_arm_vr_control.py
test_scripts/orange-cube-pick-n-place/: train_act_bypass_draccus.py
test_scripts/rollout/: deploy_combo_direct.py  policy_timing_test.py
test_scripts/xhand/: test_replay_xhand.sh
xhand_dep/: xhand_controller-1.1.7-cp312-cp312-linux_x86_64.whl  xhand_examples.py
